<resources>
    <string name="app_name">Measure Master Chef</string>
    <string name="serving_size_label">Serving Size: %1$d</string>
    <string name="search_for_recipes">Search for recipes…</string>
    <string name="add_a_recipe">Add a recipe</string>
    <string name="no_recipe_at_this_moment">No recipe at this moment</string>
    <string name="confirm">Confirm</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="serving_size">Serving Size</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="serving_size_0">Serving Size: 0</string>
    <string name="no_ingredients_added">No Ingredients Added.</string>
    <string name="convert">Convert</string>
    <string name="update">Update</string>
    <string name="serving_size_format">Serving Size: %1$s</string>
    <string name="add">Add</string>
    <string name="quantity">Enter Quantity</string>
    <string name="enter_ingredient_name">Enter ingredient name</string>
    <string name="conversion_result">Conversion Result</string>
    <string name="_0">0</string>
    <string name="swap_units">Swap units</string>
    <string name="incomplete_input_message">Incomplete Input</string>
    <string name="invalid_response">Invalid response</string>
    <string name="conversion_failed">Conversion failed</string>
    <string name="network_error">   Network Error</string>
    <string name="convert_and_add">Convert and Add</string>
    <string name="fluid_ounce">Fluid Ounce (fl oz)</string>
    <string name="ingredient_added_message">Ingredient successfully added and converted.</string>
    <string name="quantity_unit_format">%s %s</string>
    <string name="delete">Delete</string>



</resources>