<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="48dp"
        android:backgroundTint="@color/transparent"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/close_button"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="no" />


    <EditText
        android:id="@+id/recipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/closeButton"
        android:hint="@string/recipe_name"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/servingSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipeName"
        android:layout_marginBottom="16dp"
        android:hint="@string/serving_size"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/servingSize"
        android:text="@string/confirm" />

</RelativeLayout>
