<!-- res/layout/activity_ingredient_list.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <!-- CardView at the top -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="16dp">

        <!-- LinearLayout to hold the two TextViews -->
        <LinearLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Recipe name TextView -->
            <TextView
                android:id="@+id/recipeNameIngredientList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <!-- Serving size TextView -->
            <TextView
                android:id="@+id/servingSizeIngredientList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/serving_size_0"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- TextView for displaying "No Ingredients Added" -->
    <TextView
        android:id="@+id/noIngredientsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:text="@string/no_ingredients_added"
 />

    <!-- RecyclerView for ingredients -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cardView"
        android:layout_marginTop="16dp" />

    <!-- FloatingActionButton at the bottom -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_ingredient"
        app:srcCompat="@drawable/plus" />

</RelativeLayout>
