<!-- res/layout/bottom_sheet_add_ingredient.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Close button at the top right -->
    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/transparent"
        android:layout_alignParentEnd="true"
        android:src="@drawable/close_button"
        android:importantForAccessibility="no" />

    <!-- Enter ingredient name EditText -->
    <EditText
        android:id="@+id/ingredientNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/closeButton"
        android:hint="@string/enter_ingredient_name"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <!-- Quantity EditText and Unit Spinner -->
    <LinearLayout
        android:id="@+id/quantityUnitLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredientNameEditText"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <!-- Quantity EditText -->
        <EditText
            android:id="@+id/quantityEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/quantity"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:ignore="TextContrastCheck" />

        <!-- Unit Spinner -->
        <Spinner
            android:id="@+id/unitSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:entries="@array/all_measurements"
            android:minHeight="48dp" />

    </LinearLayout>

    <!-- Add Ingredient Button -->
    <Button
        android:id="@+id/addIngredientButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantityUnitLayout"
        android:layout_marginTop="16dp"
        android:text="@string/add_ingredient" />

</RelativeLayout>
